crashes during render with no apparent reason.. #49060

Closed
opened 2016-08-09 22:05:02 +02:00 by bastian salmela · 11 comments

recent versions of blender nightly (downloaded from builder.blender.org) have been crashing on me when rendering. I'm not doing anything special, using huge amount of memory or anything like that.. quite simple particle systems with Blender Internal renderer.

how can I help to figure out what is going on? crash logs are not all that fantastic.

my specs are:
Kubuntu 16.04 64bit
8gb ram
Nvidia 840M 4gb (driver 361.42)

vortex.crash.txt:

Blender 2.77 (sub 3), Commit date: 2016-08-07 21:20, Hash a0c1876

bpy.context.scene.frame_start = 360 # Property

backtrace

bf(BLI_system_backtrace+0x1d) [0x1b1d0ed]
bf() [0x117c8d1]
/lib/x86_64-linux-gnu/libc.so.6(+0x354a0) [0x7fcf02f5a4a0]
bf() [0x12456ee]
bf(ED_region_do_draw+0xa16) [0x1455076]
bf(wm_draw_update+0x637) [0x1181ce7]
bf(WM_main+0x28) [0x117d4e8]
bf(main+0x3a9) [0x11250b9]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fcf02f45830]
bf() [0x1179779]

recent versions of blender nightly (downloaded from builder.blender.org) have been crashing on me when rendering. I'm not doing anything special, using huge amount of memory or anything like that.. quite simple particle systems with Blender Internal renderer. how can I help to figure out what is going on? crash logs are not all that fantastic. my specs are: Kubuntu 16.04 64bit 8gb ram Nvidia 840M 4gb (driver 361.42) vortex.crash.txt: # Blender 2.77 (sub 3), Commit date: 2016-08-07 21:20, Hash a0c1876 bpy.context.scene.frame_start = 360 # Property # backtrace bf(BLI_system_backtrace+0x1d) [0x1b1d0ed] bf() [0x117c8d1] /lib/x86_64-linux-gnu/libc.so.6(+0x354a0) [0x7fcf02f5a4a0] bf() [0x12456ee] bf(ED_region_do_draw+0xa16) [0x1455076] bf(wm_draw_update+0x637) [0x1181ce7] bf(WM_main+0x28) [0x117d4e8] bf(main+0x3a9) [0x11250b9] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7fcf02f45830] bf() [0x1179779]

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @bastiansalmela

Added subscriber: @bastiansalmela
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Please give an example file.

Please give an example file.

Added subscriber: @brecht

Added subscriber: @brecht

You can try enabling "Lock interface during rendering", the little lock icon in the render properties render panel.

We still have some known thread safety issue with particle display in the viewport and rendering at the same time, this can often work around that problem.

You can try enabling "Lock interface during rendering", the little lock icon in the render properties render panel. We still have some known thread safety issue with particle display in the viewport and rendering at the same time, this can often work around that problem.

vortex.blend
Brecht: that could be it actually.. because it seemed quite random. when I posted the issue I rendered the blend several times... after it crashed just changed the start frame number so I eventually got all the pngs out of it :) I will be working with the particular blend next weekend again so I'll try locking. thanks for the tip!

(i tried attaching the blend file..)

.b

[vortex.blend](https://archive.blender.org/developer/F335885/vortex.blend) Brecht: that could be it actually.. because it seemed quite random. when I posted the issue I rendered the blend several times... after it crashed just changed the start frame number so I eventually got all the pngs out of it :) I will be working with the particular blend next weekend again so I'll try locking. thanks for the tip! (i tried attaching the blend file..) .b

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-08-20 16:03:18 +02:00

Got a crash here even with locked UI, due to concurrent access to pointcache from both SpaceTime editor and particle system code (namely, BKE_ptcache_ids_from_object() being called in parallel by both, the second call freeing cached_frames while the first tries to use those).

Not sure actually why/how pointcache can be not thread-protected? Though for now, will also lock SpaceTime when option is enabled, a bit annoying to lock our main 'time representation' window, but it works and at least avoids crashes...

Got a crash here even with locked UI, due to concurrent access to pointcache from both SpaceTime editor and particle system code (namely, `BKE_ptcache_ids_from_object()` being called in parallel by both, the second call freeing cached_frames while the first tries to use those). Not sure actually why/how pointcache can be not thread-protected? Though for now, will also lock SpaceTime when option is enabled, a bit annoying to lock our main 'time representation' window, but it works and at least avoids crashes...

This issue was referenced by 43bb8f12f4

This issue was referenced by 43bb8f12f44415c91f07ab5864aee7da51ef4a09

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49060
No description provided.